--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     ],
     "require": {
-        "php"                 : "^7.4|^8.0",
-        "illuminate/support"  : "^6.0|^7.0|^8.0",
-        "illuminate/database" : "^6.0|^7.0|^8.0",
+        "php"                 : "^7.4|^8.0|^8.1",
+        "illuminate/support"  : "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/database" : "^6.0|^7.0|^8.0|^9.0",
         "webpatser/laravel-uuid"       : "^3.0|^4.0",
-        "cviebrock/eloquent-sluggable" : "^6.0|^7.0|^8.0"
+        "cviebrock/eloquent-sluggable" : "^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
-        "laravel/framework"   : "^6.0|^7.0|^8.0",
+        "laravel/framework"   : "^6.0|^7.0|^8.0|^9.0",
         "mockery/mockery"     : "~1.0",
         "phpunit/phpunit"     : "^8.0|^9.0",
         "orchestra/testbench" : "^4.0|^5.0|^6.0",
